Fix customer update service
